--- a/.github/_config.yml
+++ b/.github/_config.yml
@@ -1,2 +1,2 @@
-title:               Somebodies Knowledge Base
-baseurl:             '/kb-somebodies'
+title:               BioLab Knowledge Base
+baseurl:             '/knowledge-biolab'
